Bug 173381 - Display of UTC events crossing UTC date boundary are localized incorrectly
Summary: Display of UTC events crossing UTC date boundary are localized incorrectly
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-10-23 17:33 UTC by Tim Holy
Modified: 2009-05-15 21:50 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
korganizer screenshot (178.66 KB, image/jpeg)
2008-10-23 17:34 UTC, Tim Holy
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tim Holy 2008-10-23 17:33:50 UTC
Version:           4.1.0 (using 4.1.2 (KDE 4.1.2), Kubuntu packages)
Compiler:          cc
OS:                Linux (i686) release 2.6.27-7-generic

This only works from a timezone that is different from UTC, I imagine. I'm in CST (America/Chicago), -5 from UTC I think. Here's how to reproduce the bug:
1. Create a new event.
2. Switch the timezone to UTC
3. Set it so the event spans a date boundary (e.g., 11:30 pm to 12:30 am)
4. Give it a name so you know what you're looking at (say, "buggy event")
5. Click OK
6. All should look fine so far. But now navigate away from the date on which you created the event (using the "Back" and "Forward" arrows), and then come back to it. Also check the next day (this is easiest in "week" view), and you'll see that the event is replicated. I plan to attach a screenshot (see the events "Soccer" and "Juniors", which should be displayed only on Monday, not Tuesday).
7. You can delete the event from "both" days by deleting either representation of it.
Comment 1 Tim Holy 2008-10-23 17:34:53 UTC
Created attachment 28098 [details]
korganizer screenshot
Comment 2 Tim Holy 2008-10-23 17:39:59 UTC
I should also have said: this is likely to become a much bigger issue than one might have suspected because of issues surrounding bug 165212 (http://bugs.kde.org/show_bug.cgi?id=165212). People (especially non-Europeans) who migrate from kde3 to kde4 are likely to run into this problem a lot: all of their existing calendar entries (especially recurring items) are candidates for triggering this bug.
Comment 3 Sergio Martins 2009-05-05 23:12:12 UTC
I can't reproduce this bug with KDE 4.2.3.

Can you try with a more recent version of kde?

thanks
Comment 4 Tim Holy 2009-05-05 23:23:56 UTC
(In reply to comment #3)
> I can't reproduce this bug with KDE 4.2.3.
> 
> Can you try with a more recent version of kde?
> 
> thanks

In terms of creating a new event that does this, I agree, this seems to be gone (using Kubuntu Jaunty packages). Yay!

But, old events created with an earlier version of korganizer still trigger a display bug. Below is an entry in std.ics that still spans 2 days on my calendar (this event should occur from 4pm-5pm Central time on Friday). It still gets the time-of-day correct, but it displays the same event, at the same time, on Saturday too. I have verified that this is the only event with the summary "Department seminar" in my calendar, so it's not a case of a duplicated entry.

BEGIN:VEVENT
DTSTAMP:20090505T211517Z
ORGANIZER:MAILTO:holy@somewhere.edu
CREATED:20020401T154247Z
UID:KOrganizer-1360368015.946
LAST-MODIFIED:20020401T154247Z
SUMMARY:Department seminar
PRIORITY:1
CATEGORIES:Seminar
RRULE:FREQ=WEEKLY;BYDAY=FR
DTSTART:20020405T220000Z
DTEND:20020406T000000Z
TRANSP:OPAQUE
BEGIN:VALARM
DESCRIPTION:
ACTION:DISPLAY
TRIGGER;VALUE=DATE-TIME:20020405T215500Z
END:VALARM
END:VEVENT
Comment 5 Sergio Martins 2009-05-09 14:53:26 UTC
SVN commit 965588 by smartins:

When converting KDateTime to QDate, use the user's timezone, not the incidence's, otherwise events can be shown at wrong dates in 
korganizer.

Review: http://reviewboard.kde.org/r/674/

BUG: 173381
BUG: 182323


 M  +15 -11    kodaymatrix.cpp  
 M  +9 -6      views/agendaview/koagendaview.cpp  
 M  +8 -3      views/monthview/monthview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=965588
Comment 6 Sergio Martins 2009-05-11 22:21:00 UTC
SVN commit 966745 by smartins:

Backport r965588 by smartins from trunk to the 4.2 branch:

When converting KDateTime to QDate, use the user's timezone, not the incidence's, otherwise events can be shown at wrong dates in 
korganizer.

Review: http://reviewboard.kde.org/r/674/

CCBUG: 173381
CCBUG: 182323
line, and those below, will be ignored--
M    korganizer/kodaymatrix.cpp
M    korganizer/views/monthview/monthview.cpp
M    korganizer/views/agendaview/koagendaview.cpp


 M  +7 -4      kodaymatrix.cpp  
 M  +9 -6      views/agendaview/koagendaview.cpp  
 M  +8 -3      views/monthview/monthview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=966745
Comment 7 Tim Holy 2009-05-15 21:50:08 UTC
Sergio, thanks so much for fixing this! I haven't tested it yet, but I'm already looking forward to my next distributor upgrade. Thanks again.