When converting KDateTime to QDate, use the user's timezone, not the incidence's, otherwise events can be shown at wrong dates in korganizer.

Review: http://reviewboard.kde.org/r/674/

BUG: 173381
BUG: 182323

svn path=/trunk/KDE/kdepim/; revision=965588